--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,13 @@
 project(
   'raggetable',
   'c',
-  version: '0.1.2',
+  version: '0.2.0',
   default_options: ['warning_level=3', 'c_std=gnu99', 'optimization=3'],
 )
+
+if get_option('debuglog')
+  add_project_arguments('-DDEBUG', language: 'c')
+endif
 
 lib_inc = include_directories('.')
 
@@ -36,4 +40,12 @@ if get_option('tests')
     dependencies: [unity_dependency, dep_raggetable],
   )
   test('hashtable', hashtable_test)
+
+  hashtable_bench = executable(
+    'hashtable_bench',
+    files('hashtable-bench.test.c'),
+    dependencies: [dep_raggetable],
+  )
+
+  benchmark('hashtable-bench', hashtable_bench)
 endif
